# shabka

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.claude/: settings.json
.claude/hooks/: check-rust.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
config/: default.toml  openai.toml
crates/kaizen-cli/: Cargo.toml
crates/kaizen-cli/src/: main.rs
crates/kaizen-cli/tests/: cli_integration.rs
crates/kaizen-core/: Cargo.toml
crates/kaizen-core/src/: consolidate.rs  dedup.rs  error.rs  graph.rs  history.rs  lib.rs  llm.rs  ranking.rs  retry.rs  sharing.rs
crates/kaizen-core/src/config/: mod.rs
crates/kaizen-core/src/embedding/: gemini.rs  local.rs  mod.rs  openai.rs
crates/kaizen-core/src/model/: graph.rs  memory.rs  tests.rs
crates/kaizen-core/src/storage/: helix.rs
crates/kaizen-core/tests/: helix_roundtrip.rs  mcp_integration.rs  ollama_embedding.rs
crates/kaizen-core/tests/common/: mod.rs
crates/kaizen-hooks/: Cargo.toml
crates/kaizen-hooks/src/: event.rs  handlers.rs  main.rs  relate.rs  session.rs
crates/kaizen-hooks/tests/: session_e2e.rs
crates/kaizen-mcp/: Cargo.toml
crates/kaizen-mcp/src/: main.rs  server.rs
crates/kaizen-web/: Cargo.toml
crates/kaizen-web/src/: error.rs  main.rs
crates/kaizen-web/src/routes/: analytics.rs  api.rs  graph.rs  memories.rs  mod.rs  search.rs  timeline.rs
crates/kaizen-web/templates/: analytics.html  base.html  graph.html  search.html  timeline.html
crates/kaizen-web/templates/memories/: detail.html  form.html  list.html
crates/shabka-cli/: Cargo.toml
crates/shabka-cli/src/: main.rs
crates/shabka-cli/src/tui/: app.rs  event.rs  mod.rs
crates/shabka-cli/src/tui/views/: create.rs  detail.rs  list.rs  mod.rs  splash.rs  status.rs
crates/shabka-cli/src/tui/widgets/: filter_bar.rs  help_bar.rs  mod.rs  search_input.rs
crates/shabka-cli/tests/: cli_integration.rs
crates/shabka-core/: Cargo.toml  build.rs
crates/shabka-core/src/: assess.rs  auto_tag.rs  consolidate.rs  context_pack.rs  decay.rs  dedup.rs  error.rs  graph.rs  history.rs  lib.rs  llm.rs  ranking.rs  retry.rs  scrub.rs  sharing.rs  tokens.rs  trust.rs
crates/shabka-core/src/config/: mod.rs
crates/shabka-core/src/embedding/: gemini.rs  hash.rs  local.rs  mod.rs  openai.rs  provider.rs
crates/shabka-core/src/model/: memory.rs  mod.rs  session.rs  tests.rs
crates/shabka-core/src/storage/: backend.rs  helix.rs  mod.rs  sqlite.rs
crates/shabka-core/tests/: helix_roundtrip.rs  mcp_integration.rs  ollama_embedding.rs
crates/shabka-core/tests/common/: mod.rs
crates/shabka-hooks/: Cargo.toml
crates/shabka-hooks/src/: event.rs  handlers.rs  main.rs  relate.rs  session.rs
crates/shabka-hooks/tests/: session_e2e.rs
crates/shabka-mcp/: Cargo.toml
crates/shabka-mcp/src/: lib.rs  main.rs  server.rs
crates/shabka-web/: Cargo.toml
crates/shabka-web/src/: error.rs  main.rs
crates/shabka-web/src/routes/: analytics.rs  api.rs  graph.rs  memories.rs  mod.rs  search.rs  timeline.rs
crates/shabka-web/templates/: analytics.html  base.html  graph.html  search.html  timeline.html
crates/shabka-web/templates/memories/: detail.html  form.html  list.html
crates/shabka-web/templates/partials/: search_results.html
docs/: api.md  architecture.md  book.toml  cli.md  configuration.md  development.md  mcp-registry.md  web-dashboard.md
docs/clients/: claude-code.md  cline.md  cursor.md  windsurf.md
docs/plans/: 2026-02-16-token-budget-context-packs-design.md  2026-02-16-token-budget-context-packs.md  2026-02-17-readme-overhaul-design.md  2026-02-17-readme-overhaul.md  2026-02-18-trust-scoring-design.md  2026-02-18-trust-scoring.md  2026-02-19-rig-integration-design.md  2026-02-19-rig-integration.md  2026-02-19-rig-leverage-design.md  2026-02-19-rig-leverage.md  2026-02-20-context-aware-retrieval-design.md  2026-02-20-context-aware-retrieval.md  2026-02-20-sqlite-mode-design.md  2026-02-21-launch-readiness-design.md  2026-02-21-launch-readiness.md  2026-02-21-mcp-ecosystem-design.md  2026-02-21-sqlite-storage.md  2026-02-22-sqlite-extensions-design.md  2026-02-22-sqlite-extensions.md  2026-02-22-test-coverage-design.md  2026-02-22-test-coverage-plan.md  2026-02-23-adoption-strategy.md  2026-02-23-performance-ux-integrity.md  2026-02-23-web-dashboard-upgrade-design.md  2026-02-23-web-dashboard-upgrade-plan.md
docs/src/: README.md  SUMMARY.md
docs/src/clients/: continue.md  cursor.md
docs/src/concepts/: memory-types.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/guide/: api.md  cli.md  web-dashboard.md
docs/src/reference/: architecture.md  changelog.md  development.md
helix/: helix.toml  queries.hx  schema.hx
helix/.helix/dev/helix-container/src/: queries.rs
scripts/: publish.sh
tests/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/fixtures/: kaizen-fixtures.ts
tests/e2e/helpers/: api-client.ts  service-guard.ts  test-data.ts
tests/e2e/specs/: analytics.spec.ts  api-rest.spec.ts  bulk-operations.spec.ts  error-handling.spec.ts  graph.spec.ts  health.spec.ts  memory-crud.spec.ts  memory-detail.spec.ts  memory-form.spec.ts  memory-list.spec.ts  navigation.spec.ts  search.spec.ts  theme.spec.ts  timeline.spec.ts
