[workspace]
resolver = "2"
members = [
    "crates/shabka-core",
    "crates/shabka-mcp",
    "crates/shabka-hooks",
    "crates/shabka-web",
    "crates/shabka-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mehdig-dev/shabka"
homepage = "https://github.com/mehdig-dev/shabka"
readme = "README.md"
keywords = ["llm", "memory", "mcp", "embeddings", "knowledge-graph"]
categories = ["command-line-utilities", "database"]
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
shabka-core = { path = "crates/shabka-core", version = "0.2.0", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1"

# Database
helix-rs = "0.1"
reqwest = { version = "0.13", features = ["json"] }

# Embeddings / LLM framework
rig-core = { version = "0.31", default-features = false, features = ["reqwest-rustls"] }

# Web
axum = "0.8"
askama = "0.15"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# IDs and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.15"
toml = "0.9"
dirs = "6"

# Text processing
regex = "1"
owo-colors = "4"

# Process/path utilities
which = "8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
