[package]
name = "kaizen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kaizen"
path = "src/main.rs"

[dependencies]
kaizen-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
owo-colors = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }
