[package]
name = "kaizen-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
helix-rs = { workspace = true }
reqwest = { workspace = true }
fastembed = { workspace = true, optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[features]
default = ["embed-local"]
embed-local = ["dep:fastembed"]
