[package]
name = "kaizen-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kaizen-web"
path = "src/main.rs"

[dependencies]
kaizen-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
