[package]
name = "shabka-cli"
description = "CLI for Shabka — search, manage, and maintain LLM memories"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "shabka"
path = "src/main.rs"

[dependencies]
shabka-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
owo-colors = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
