[package]
name = "shabka-core"
description = "Core library for Shabka — persistent LLM memory with embeddings, graph intelligence, trust scoring, and smart dedup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
helix-rs = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
rig-core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[features]
default = []
